# phantom-frame-template

./: .gitignore  Cargo.toml  LICENSE
apps/client/: build.js  package.json  svelte.config.js
apps/server/: Cargo.toml  build.rs
apps/server/src/: embed.rs  env.rs  main.rs  server.rs
apps/server/src/embed/: bun_runtime.rs  dev.rs  frontend.rs  mod.rs  static_assets.rs
