[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
dotenv = "0.15.0"
phantom-frame = "0.1.13"
rust-embed = "8.9.0"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tower = "0.4.13"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
