[package]
name = "server"
version.workspace = true
edition = "2024"

[features]
default = []
bun_compile = []

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
dotenv = "0.15.0"
phantom-frame = "0.1.13"
rust-embed = { version = "8.9.0", features = ["include-exclude"] }
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tower = "0.5.2"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
